turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: not found: value i
  setCouleurBrosse(colors((i+1)%colors.length));baisseBrosse();leveBrosse()
                           ^