turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var x = 0
  var c = Color.black
  for(i<- 0 to colors.length){
    if(c == colors(i)){x = i}
  }
  setCouleurBrosse(colors((i+1)%colors.length));baisseBrosse();leveBrosse()
  if(rule(x)=="L"){gauche();avance();}
  else{droite();avance();}
}